--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -265,14 +265,12 @@ affect out-of-band connections, only real game-related links.
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
-@deftypefun {int} {lw6p2p_node_update_info} (lw6p2p_node_t * @var{node}, int @var{round}, char * @var{level}, int @var{required_bench}, int @var{nb_colors}, int @var{max_nb_colors}, int @var{nb_cursors}, int @var{max_nb_cursors}, int @var{nb_nodes}, int @var{max_nb_nodes}, int @var{game_screenshot_size}, void * @var{game_screenshot_data})
+@deftypefun {int} {lw6p2p_node_update_info} (lw6p2p_node_t * @var{node}, int @var{round}, char * @var{level}, int @var{nb_colors}, int @var{max_nb_colors}, int @var{nb_cursors}, int @var{max_nb_cursors}, int @var{nb_nodes}, int @var{max_nb_nodes}, int @var{game_screenshot_size}, void * @var{game_screenshot_data})
 @var{node}:  node to update
 
 @var{round}:  the current round (can have an offset with real round number)
 
 @var{level}:  the name of the current level (map)
-
-@var{required_bench}:  the bench required to connect
 
 @var{nb_colors}:  number of colors playing
 
@@ -298,6 +296,8 @@ to other peers and are, by nature, dynamic.
 
 @deftypefun {int} {lw6p2p_node_update_serialized} (lw6p2p_node_t * @var{node}, u_int64_t @var{seq_id}, char * @var{serialized_level}, char * @var{serialized_game_struct}, char * @var{serialized_game_state})
 @var{node}:  node to update
+
+@var{seq_id}:  sequence id this serialized data corresponds to
 
 @var{serialized_level}:  level object serialized serialized as an hexa string
 
