--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -243,8 +243,10 @@ nodes, disconnect it from any peer.
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
-@deftypefun {int} {lw6p2p_node_client_join} (lw6p2p_node_t * @var{node}, char * @var{remote_url})
+@deftypefun {int} {lw6p2p_node_client_join} (lw6p2p_node_t * @var{node}, u_int64_t @var{remote_id}, char * @var{remote_url})
 @var{node}:  node to use
+
+@var{remote_id}:  id of remote node to join
 
 @var{remote_url}:  url of remote node to join
 
